[package]
name = "yawfc"
description="Yet another wave function collapse implementation"
repository="https://github.com/10maurycy10/wfc.git"
homepage="https://github.com/10maurycy10/wfc"
license="GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
